kiwi: touch screen issue fix two

--- a/content/popup.css
+++ b/content/popup.css
@@ -29,6 +29,8 @@ article {
   font-family: var(--font-family);
 
   box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.5);
+  -webkit-overflow-scrolling: touch;
+  touch-action: pan-y;
 }
 
 #mine-buttons,
@@ -310,24 +312,6 @@ button.easy {
 
 .more-meanings.expanded {
   display: block;
-}
-
-article {
-  display: flex;
-  flex-direction: column;
-  gap: 0.25em;
-  margin: 0;
-  padding: 1em;
-  max-width: 24em;
-  max-height: 40vh;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch; /* Add this */
-  touch-action: pan-y; /* Add this */
-  background-color: var(--color-background);
-  border-radius: var(--border-radius);
-  color: var(--color-text);
-  font-family: var(--font-family);
-  box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.5);
 }
 
 .immersion-example {
